# planet-renderer

./: .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: SDL.c.8AE29D06A3927E57.idx  SDL.h.9D04EC53F6D8E67F.idx  SDL_RLEaccel.c.9A328CD759FAE63B.idx  SDL_RLEaccel_c.h.AE60486DE1719AB4.idx  SDL_alsa_audio.c.67240117FC94E208.idx  SDL_alsa_audio.h.522258EFECB844DE.idx  SDL_appid.c.D473B5B01967D976.idx  SDL_appid.h.F1C085E3364AAD18.idx  SDL_assert.c.426692DC728A56AB.idx  SDL_assert.h.8BE3BF51CCBE3136.idx  SDL_assert_c.h.E823ED18EAAEB5AB.idx  SDL_asyncio.c.04A15DDC98627CA4.idx  SDL_asyncio.h.95039363C71FE679.idx  SDL_asyncio_c.h.EE824519BA6135B2.idx  SDL_asyncio_generic.c.9F53850CA339F706.idx  SDL_asyncio_liburing.c.095440DE40E61BD4.idx  SDL_atomic.c.7590A76F83835DF9.idx  SDL_atomic.h.A69E592E2407CAEB.idx  SDL_audio.c.B605EF0F34188F03.idx  SDL_audio.h.5C3A217C36285D5B.idx  SDL_audio_c.h.73E16CAA2CD72B54.idx  SDL_audio_channel_converters.h.ADBD2CB69EACE42C.idx  SDL_audiocvt.c.D17B850D302CA716.idx  SDL_audiodev.c.C6DC37D54EBA39AC.idx  SDL_audioqueue.c.B63740F4D2F62C94.idx  SDL_audioqueue.h.9690FA8A43898D9C.idx  SDL_audioresample.c.EF39B44BA120B6F8.idx  SDL_audioresample.h.2F846D7265419D09.idx  SDL_audiotypecvt.c.3570053BE04A9B99.idx  SDL_begin_code.h.8674160207803379.idx  SDL_bits.h.7EE9FC59C8F99139.idx  SDL_blendfillrect.c.97064CB3547AB4FD.idx  SDL_blendfillrect.h.EEC51DC5E1BB6C9C.idx  SDL_blendline.c.6002820E025D4782.idx  SDL_blendline.h.9E8B243C85873AB2.idx  SDL_blendmode.h.214719B81AE979B5.idx  SDL_blendpoint.c.620F29B6CF33E899.idx  SDL_blendpoint.h.E4BA4E3361177FEC.idx  SDL_blit.c.3D488BADC85B25DD.idx  SDL_blit.h.9279228546ED1EB7.idx  (+828 more)
src/: main.cpp  vulkan_engine.cpp  vulkan_engine.h
src/shaders/: shader.vert  vert.spv
